# houseuk-dashboard

./: .github-ci.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  codecov.yml  coverage.xml  docker-compose.yaml  pom.xml  pyproject.toml  rightmove_out.json  tox.ini  values.yaml
.circleci/: config.yml
.github/issue_templates/: [New Request] Create Opportunity Canvas.md  [New Request] Create Standard Data Team Issue.md
admin/: deploy.sh  onboarding_script.sh  onboarding_script_ubuntu.sh
config/: airflow.cfg
core-domain-lib/: pom.xml
core-domain-lib/src/main/java/com/amberdata/coredomainlib/: CoreDomainLibApplication.java
core-domain-lib/src/test/java/com/amberdata/coredomainlib/: CoreDomainLibApplicationTests.java
dags/: README.md  airflow_utils.py  kubernetes_helpers.py
dags/data_science/: test.ipynb
dags/data_science/.ipynb_checkpoints/: test-checkpoint.ipynb
dags/extract/: landRegistry_extract.py  rightmove_extract.py
datafeed/: pom.xml
datafeed-scheduler/: pom.xml
datafeed-scheduler/src/main/java/com/amberdata/datafeed/scheduler/datafeedscheduler/: DatafeedSchedulerApplication.java
datafeed-scheduler/src/main/java/com/amberdata/datafeed/scheduler/datafeedscheduler/config/: SchedulerConfig.java
datafeed-scheduler/src/main/java/com/amberdata/datafeed/scheduler/datafeedscheduler/sched/: DataFeedSchedTask.java
datafeed-scheduler/src/main/resources/: application.yml
datafeed-scheduler/src/test/java/com/amberdata/datafeed/scheduler/datafeedscheduler/: DatafeedSchedulerApplicationTests.java
datafeed/src/main/java/com/amber/data/houseuk/: HouseukApplication.java
datafeed/src/main/java/com/amber/data/houseuk/model/: Address.java
datafeed/src/main/java/com/amberData/datafeed/houseuk/: HouseukApplication.java
datafeed/src/main/java/com/amberData/datafeed/houseuk/pojo/: Address.java  Duration.java  EstateType.java  PropertyType.java  Transaction.java
datafeed/src/main/resources/: application.yml
extract/: README.md
extract/landRegistry/: README.md
extract/landRegistry/src/: execute.py
extract/misc/: agents.py  log.py  middleware.py  proxy.py  spider.py
extract/rightmove/: README.md  requirements.txt
extract/rightmove/rightmove/: items.py  itemsloaders.py  middlewares.py  pipelines.py  settings.py
extract/rightmove/rightmove/misc/: url_utils.py
extract/rightmove/rightmove/spiders/: mydomain.py  rightmove.py
extract/rightmove/src/: api.py  execute.py
extract/rightmovetest/src/: api.py  execute.py
extract/tests/: README.md  test_rightmove.py  test_url_utils.py
extract/utills/: helper.py
house-api-wrapper/: pom.xml
house-api-wrapper/src/main/java/com/amberData/datafeed/houseuk/: HouseApiWrapper.java
house-api-wrapper/src/main/java/com/amberData/datafeed/houseuk/pojo/: PropertyType.java  Transaction.java  TransactionReq.java
house-api-wrapper/src/main/resources/: application.yml
house-api-wrapper/src/test/java/com/amber/data/houseuk/: HouseukApplicationTests.java
house-webflux-api/: pom.xml
house-webflux-api/src/main/java/com/amberdata/housewebfluxapi/: HouseWebfluxApiApplication.java
house-webflux-api/src/test/java/com/amberdata/housewebfluxapi/: HouseWebfluxApiApplicationTests.java
house/dags/: README.md  airflow_utils.py  kube_secrets.py
house/dags/data_science/: test.ipynb
house/dags/extract/: crime_extract.py  landRegistry_extract.py
house/extract/: README.md  extract-ci.yml
house/extract/crime/: crime.py
house/extract/landRegistry/: README.md  landRegistry_data.sh  langRegistry.py
house/extract/rightmove/: README.md  rightmove.yaml  scrapy.cfg  scrapyd.conf
house/extract/rightmove/rightmove/: items.py  itemsloaders.py  pipelines.py  settings.py
house/extract/rightmove/rightmove/misc/: url_utils.py
house/extract/rightmove/rightmove/spiders/: rightmove.py
house/extract/tests/: test_langRegistry.py  test_rightmove.py  test_url_utils.py
house/extract/tests/template/: Properties For Sale in W10 _ Rightmove.html
house/orchestraction/dags/: airflow_utils.py  kube_secrets.py
house/orchestration/: orchestration_utils.py
infra/live/global/s3/: main.tf  s3_production.tfvars  variables.tf
infra/live/prod/: main.tf
notebooks/exploratory/: 01_rightmove_data_analysis.ipynb
