[project]
name = "houseuk-dashboard"
version = "0.1.0"
description = ""
authors = [{ name = "kang wang", email = "kangqiwang@outlook.com" }]
requires-python = "~=3.13"
readme = "README.md"

dependencies = [
]

[dependency-groups]
test = [
    "pytest>=8.4.1,<9",
    "coverage>=7.9.2,<8",
    "pre-commit>=4.2.0,<5",
    "pytest-doctestplus>=1.4.0,<2",
]
docs = [
    "sphinx>=8.2.3,<9",
    "jinja2>=3.1.6,<4",
    "docformatter>=1.7.7,<2",
]

types = [
    "mypy>=1.16.1,<2",
    "codespell>=2.4.1,<3",
]

lint =[
    "ruff>=0.12.2,<0.13",
]

[tool.uv]
default-groups = [
    "test",
    "docs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]


[tool.codespell]
ignore-words-list="""
    Id,
"""
