[project]
name = "houseuk-dashboard"
version = "0.1.0"
description = ""
authors = [{ name = "kang wang", email = "kangqiwang@outlook.com" }]
requires-python = "~=3.13"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mypy = "^1.9.0"
requests = "^2.31.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
lxml = "^5.2.1"
pyspark = "^3.5.1"
apache-airflow-providers-cncf-kubernetes = "^8.1.1"
sphinx = "^7.3.7"
beautifulsoup4 = "^4.12.3"
python-dateutil = "^2.9.0.post0"
amber-data-utils = "^0.1.1"

[dependency-groups]
test = [
    "pytest>=8.4.1,<9",
    "coverage>=7.9.2,<8",
    "pre-commit>=4.2.0,<5",
    "pytest-doctestplus>=1.4.0,<2",
]
docs = [
    "sphinx>=8.2.3,<9",
    "jinja2>=3.1.6,<4",
    "docformatter>=1.7.7,<2",
]

types = [
    "mypy>=1.16.1,<2",
    "codespell>=2.4.1,<3",
]

lint =[
    "ruff>=0.12.2,<0.13",
]

[tool.uv]
default-groups = [
    "test",
    "docs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]


[tool.codespell]
ignore-words-list="""
    Id,
    iTerm,
    couldn,
"""

[tool.ruff]
line-length = 88
exclude=[
    ".git",
    ".mypy_cache",
    ".vscode",
    "__pycache__",
]

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
extend-select=[
    "A", # flake-builtins(A)
    "CPY", # flake8-copyright(CPY)
    "E", # pycodestule(E,W) Error(E)
    "F",  # Pyflakes(F)
    "I", # isort(I)
    "N", # pep8-naming(N)
    "PERF", # Perflint(PERF)
    "PGH", # pygrep-hooks(PGH)
    "RUF", # ruff-specific rules (RUF)
    "T20", # flake8-print(T20)
    "W", # pycodestule(E,W) Warning(W)
    ]
