[project]
name = "house"
version = "0.1.0"
description = ""
authors = [{ name = "kang wang", email = "kang7.wang@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "numpy>=2.2.6",
    "pyperf>=2.9.0",
    "scrapy>=2.13.3",
    "vulture>=2.14",
    "xenon>=0.9.3",
    "pre-commit>=4.2.0,<5",
    "tox>=4.28.2",
    "pyarrow>=21.0.0",
    "pandas>=2.3.1",
    "scrapy-contrib-bigexporters>=0.5.0",
    "fastparquet>=2024.11.0",
    "fire>=0.7.0",
    "scrapy-selenium>=0.0.7",
    "selenium>=4.34.2",
    "botocore>=1.40.8",
    "boto3>=1.40.8",
    "scrapyd>=1.6.0",
]

[dependency-groups]
test = [
    "pytest>=8.4.1,<9",
    "coverage>=7.9.2,<8",
    "pytest-doctestplus>=1.4.0,<2",
    "pytest-cov>=6.2.1",
    "pytest-sugar>=1.0.0",
]
docs = [
    "sphinx>=8.2.3,<9",
    "jinja2>=3.1.6,<4",
    "docformatter>=1.7.7,<2",
]

types = [
    "mypy>=1.16.1,<2",
    "codespell>=2.4.1,<3",
]

lint =[
    "ruff>=0.12.2,<0.13",
]

[tool.uv]
default-groups = [
    "test",
    "docs",
]

[tool.uv.sources]
scrapy-selenium = { git = "https://github.com/jogobeny/scrapy-selenium" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[tool.codespell]
ignore-words-list="""
    Id,
    iTerm,
    couldn,
"""

[tool.ruff]
line-length = 88
exclude=[
    ".git",
    ".mypy_cache",
    ".vscode",
    "__pycache__",
]

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
extend-select=[
    "A", # flake-builtins(A)
    "CPY", # flake8-copyright(CPY)
    "E", # pycodestule(E,W) Error(E)
    "F",  # Pyflakes(F)
    "I", # isort(I)
    "N", # pep8-naming(N)
    "PERF", # Perflint(PERF)
    "PGH", # pygrep-hooks(PGH)
    "RUF", # ruff-specific rules (RUF)
    "T20", # flake8-print(T20)
    "W", # pycodestule(E,W) Warning(W)
    ]

[tool.ruff.format]
    indent-style="space"
    quote-style="double"
    line-ending="auto"

[tool.pytest.ini_options]
log_cli=true
log_cli_level="INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
